# Railgun

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md
src/: async_future_result.rs  async_map.rs  async_result.rs  block_in_place_result.rs  blocking_result.rs  future_result.rs  lib.rs  map_iterator.rs  merge.rs  tap.rs  trait_future_result.rs
src/futures/: mod.rs
src/futures/future_result/: mod.rs
src/iterators/: map_iterator.rs  mod.rs
src/option_extended/: mod.rs
src/rail_merge/: mod.rs
src/rail_tap/: mod.rs
src/railsgun_deprecated/: async_result.rs  block_in_place_result.rs  mod.rs
