[package]
name = "railsgun"
version = "1.0.2"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
edition = "2018"
description = "Excessive tooling for Result handling - If you want rails you got RAILS!"
readme = "README.md"
categories = [""]
keywords = ["async", "railway", "rails", "result-ext"]
license = "MIT"
repository = "https://github.com/nebula-technologies/Railgun"

[dependencies]
async-trait = "0.1.51"

[dependencies.tokio]
version = "1.12.0"
features = ["rt-multi-thread", "rt", "macros"]
