[package]
name = "railsgun"
version = "2.0.3"
authors = ["Anders Blenstrup-Pedersen <abp-git@ryuu.technology>"]
edition = "2018"
description = "Excessive tooling for Result handling - If you want rails you got RAILS!"
readme = "README.md"
categories = [""]
keywords = ["async", "railway", "rails", "result-ext"]
license = "MIT"
repository = "https://github.com/nebula-technologies/Railgun"

[features]
default = ["rail-merge", "rail-tap", "railsgun-deprecated", "future-result", "option-extended", "map-iter"]
rail-merge = []
rail-tap = []
railsgun-deprecated = []
future-result = []
option-extended = []
map-iter = []

[dependencies.tokio]
version = "1.12.0"
features = ["rt-multi-thread", "rt", "macros"]
